Fix #navbar-main-dropdown 1px gap

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -57,7 +57,7 @@
 }
 
 .navbar-main-dropdown-show {
-	top: -180% !important;
+	top: -179% !important;
 }
 
 @media screen and (max-width: 47.9em) {
